--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Нормативные акты</title>
+  <title>Нормативные документы</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -45,7 +45,7 @@
 				</div>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Нормативные акты</a></li><li class="nav-item">
+				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Нормативные документы</a></li><li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="page3.html">Образовательная программа</a>
 					</li>
 					<li class="nav-item">
