--- a/page2.html
+++ b/page2.html
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="col-12 mb-5 content-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                Нормативные акты</h3>
+                Нормативные документы</h3>
             
         </div>
         <div class="row justify-content-center ">
